--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,7 @@ venv/
 .DS_Store
 Thumbs.db
 
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints/
-
-# VSCode settings (optional)
+# VSCode settings 
 .vscode/
 
 # Logs and temporary files
@@ -24,32 +21,32 @@ Thumbs.db
 *.bak
 
 # Ignore all data folders that may contain large files
-/data/
-/large/
-/small/
-/gtrsb/
+**/data/
+**/large/
+**/small/
+**/gtsrb/
 
 # Generated model/analysis outputs
-/diagrams/
-/corpus0/
-/corpus1/
-/corpus2/
+**//diagrams/
+**//corpus0/
+**//corpus1/
+**//corpus2/
 
 # Sentence and NLP data (if not small/sample)
 # (remove this line if you want those small .txt files tracked)
-/sentences/
+**//sentences/
 
 # Pygame assets - keep small assets, ignore bulky ones
-assets/*.ttf
-assets/*.mp3
-assets/*.wav
-assets/*.mp4
-assets/*.avi
-assets/*.mov
-assets/*.zip
-assets/*.tar
-assets/*.gz
-assets/*.7z
+**/assets/*.ttf
+**/assets/*.mp3
+**/assets/*.wav
+**/assets/*.mp4
+**/assets/*.avi
+**/assets/*.mov
+**/assets/*.zip
+**/assets/*.tar
+**/assets/*.gz
+**/assets/*.7z
 
 # CSVs - ignore large ones but allow small samples
 *.csv
